2008-09-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* networkconfig.h: Revert previous patch. Use loopback configuration
	only.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-mpc8313erdb.h, networkconfig.h: Rename STACK_CHECKER_ON
	to more appropriate CONFIGURE_STACK_CHECKER_ENABLED.

2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-mpc8313erdb.h: New file.

2008-08-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* networkconfig-qemu.h, networkconfig.h: Add missing initializers.

2008-02-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-icecube.h, networkconfig-qemu.h, networkconfig.h:
	Updated to include new fields and expand tabs.

2007-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Added telnetd test.

2007-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-icecube.h: Fix MAC address and typo.

2007-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add mcast.

2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig.h: Loopback only network configuration tweaked to have
	a hostname.

2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig.h: Loopback only network configuration. Use one of the
	real ones as an example.

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-qemu.h: Disable DHCP and use static IP.
	* networkconfig.h: Use only loopback so tests can run OK on any target
	even if they can't do anything.
	* networkconfig-icecube.h: New file.

2007-08-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* VERSION: Updated to network-demos-4.7.99.2.

2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-qemu.h: New file.

2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig.h: Make the NFS server, remote filesystem, and
	directory to look at configurable.

2007-06-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile: Remove netlink. It appeared to be a hacked copy of http.